--- a/index.html
+++ b/index.html
@@ -10,29 +10,54 @@
 
   <!-- Header Section: Contains logo and navigation links -->
   <header class="header">
-    <div class="logo">Header Logo</div>  <!-- Logo -->
-    <ul class="header-links">  <!-- Navigation links in an unordered list -->
-      <li><a href="#">Header Link One</a></li> 
-      <li><a href="#">Header Link Two</a></li>
-      <li><a href="#">Header Link Three</a></li>
-    </ul>
+    <div class="header-container">
+        <div class="logo">Header Logo</div>  <!-- Logo -->
+        <ul class="header-links">  <!-- Navigation links in an unordered list -->
+          <li><a href="#">Header Link One</a></li> 
+          <li><a href="#">Header Link Two</a></li>
+          <li><a href="#">Header Link Three</a></li>
+        </ul>
+    </div>
   </header>
 
   <!-- Hero Section: Main section with title, subtext, and call-to-action button -->
   <section class="hero">
-    <div class="hero-content">  <!-- Container for main heading and button -->
-      <h1>This website is awesome</h1>  <!-- Main title -->
-      <p>This website has some subtext that goes here under the main title. It’s a smaller font and the color is lower contrast.</p>  <!-- Subtext for description -->
-      <button>Sign Up</button>  <!-- Call to action button -->
-    </div>
-    <div class="image-placeholder">
-      <p>This is a placeholder for an image</p>  <!-- Placeholder for image -->
+    <div class="hero-container">
+     <div class="hero-content"><!-- Container for main heading and button -->
+        <h1>This website is awesome</h1>  <!-- Main title -->
+        <p>This website has some subtext that goes here under the main title. It’s a smaller font and the color is lower contrast.</p>  <!-- Subtext for description -->
+        <button>Sign Up</button>  <!-- Call to action button -->
+     </div> 
+     <div class="image-placeholder">
+        <p>This is a placeholder for an image</p></div>  <!-- Placeholder for image -->
     </div>
   </section>
 
   <!-- Information Section: Placeholder for additional info -->
   <section class="information">
-    <!-- Add information here -->
+    <div class="information-container">
+        <h2>Some random information.</h2>
+        <div class="info-cards-container">
+            <div class="info-card">
+            <!-- Blue box content -->
+            <div class="box-content"></div>
+            <!-- Text under the blue box -->
+            <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="info-card">
+            <div class="box-content"></div>
+            <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="info-card">
+            <div class="box-content"></div>
+            <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="info-card">
+            <div class="box-content"></div>
+            <p>this is some subtext under an illustration or image</p>
+            </div>
+        </div>
+    </div>
   </section>
 
   <!-- Testimonial Section: Placeholder for quote -->
@@ -49,6 +74,5 @@
   <footer class="footer">
     <p>Copyright © The Odin Project 2011</p> 
   </footer>
-
 </body>
 </html>
