--- a/index.html
+++ b/index.html
@@ -62,7 +62,14 @@
 
   <!-- Testimonial Section: Placeholder for quote -->
   <section class="testimonial">
-    <!-- Add customer testimonials, quotes, or reviews here -->
+    <div class="testimonial-container">
+        <div class="quote">
+            <p>This is an inspiring quite,or a testimonal from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        </div>
+        <div class="thor">
+            <p>-Thor God of Thunder</p>
+        </div>
+    </div>
   </section>
 
   <!-- Call to Action Section: Encourage users to take action (e.g., sign up) -->
