feat(index.html): add call to action section and clean up structure
- Added call to action section with header, body, and sign-up button
- Improved overall structure and alignment of the HTML
- Ensured consistency across sections for readability

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Landing Page</title>
-  <link rel="stylesheet" href="style.css">  <!-- Link to external stylesheet -->
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <!-- Header Section: Contains logo and navigation links -->
+  <!-- Header Section -->
   <header class="header">
     <div class="header-container">
-        <div class="logo">Header Logo</div>  <!-- Logo -->
-        <ul class="header-links">  <!-- Navigation links in an unordered list -->
+        <div class="logo">Header Logo</div>
+        <ul class="header-links"> 
           <li><a href="#">Header Link One</a></li> 
           <li><a href="#">Header Link Two</a></li>
           <li><a href="#">Header Link Three</a></li>
@@ -20,47 +20,46 @@
     </div>
   </header>
 
-  <!-- Hero Section: Main section with title, subtext, and call-to-action button -->
+  <!-- Hero Section -->
   <section class="hero">
     <div class="hero-container">
-     <div class="hero-content"><!-- Container for main heading and button -->
-        <h1>This website is awesome</h1>  <!-- Main title -->
-        <p>This website has some subtext that goes here under the main title. It’s a smaller font and the color is lower contrast.</p>  <!-- Subtext for description -->
-        <button>Sign Up</button>  <!-- Call to action button -->
-     </div> 
-     <div class="image-placeholder">
-        <p>This is a placeholder for an image</p></div>  <!-- Placeholder for image -->
+        <div class="hero-content">
+            <h1>This website is awesome</h1>
+            <p>This website has some subtext that goes here under the main title. It’s a smaller font and the color is lower contrast.</p>  <!-- Subtext for description -->
+            <button>Sign Up</button> 
+        </div> 
+        <div class="image-placeholder">
+            <p>This is a placeholder for an image</p>
+        </div> 
     </div>
   </section>
 
-  <!-- Information Section: Placeholder for additional info -->
+  <!-- Information Section -->
   <section class="information">
     <div class="information-container">
         <h2>Some random information.</h2>
         <div class="info-cards-container">
             <div class="info-card">
-            <!-- Blue box content -->
-            <div class="box-content"></div>
-            <!-- Text under the blue box -->
-            <p>this is some subtext under an illustration or image</p>
+                <div class="box-content"></div>
+                <p>this is some subtext under an illustration or image</p>
             </div>
             <div class="info-card">
-            <div class="box-content"></div>
-            <p>this is some subtext under an illustration or image</p>
+                <div class="box-content"></div>
+                <p>this is some subtext under an illustration or image</p>
             </div>
             <div class="info-card">
-            <div class="box-content"></div>
-            <p>this is some subtext under an illustration or image</p>
+                <div class="box-content"></div>
+                <p>this is some subtext under an illustration or image</p>
             </div>
             <div class="info-card">
-            <div class="box-content"></div>
-            <p>this is some subtext under an illustration or image</p>
+                <div class="box-content"></div>
+                <p>this is some subtext under an illustration or image</p>
             </div>
         </div>
     </div>
   </section>
 
-  <!-- Testimonial Section: Placeholder for quote -->
+  <!-- Testimonial Section -->
   <section class="testimonial">
     <div class="testimonial-container">
         <div class="quote">
@@ -72,14 +71,25 @@
     </div>
   </section>
 
-  <!-- Call to Action Section: Encourage users to take action (e.g., sign up) -->
-  <section class="cta">
-    <!-- Add call to action button and text here -->
+  <!-- Call to Action Section -->
+<section class="cta">
+    <div class="cta-container">
+      <div class="cta-content">
+        <div class="cta-header">
+          <p>Call to action! It's time!</p>
+        </div>
+        <div class="cta-body">
+          <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
+      </div>
+      <button>Sign Up</button>
+    </div>
   </section>
    
-  <!-- Footer Section: Contains copyright -->
+  <!-- Footer Section -->
   <footer class="footer">
     <p>Copyright © The Odin Project 2011</p> 
   </footer>
+
 </body>
 </html>
